[gd_scene load_steps=53 format=3 uid="uid://c38mt6u1rj78k"]

[ext_resource type="Script" path="res://Player.gd" id="1_y7mrf"]
[ext_resource type="Texture2D" uid="uid://bklwp8qbq5wlr" path="res://Player/Player Sprites/Idle/BlueMage_Idle.png" id="2_1euo6"]
[ext_resource type="Texture2D" uid="uid://c3nahugvlbgf7" path="res://Player/Player Sprites/Walk/BlueMage_Walk.png" id="2_5adu3"]
[ext_resource type="Texture2D" uid="uid://ce3g6phpkan55" path="res://Player/Player Sprites/Attack/Bluge_Mage_Attack.png" id="4_50eux"]
[ext_resource type="Texture2D" uid="uid://ostyakgf055c" path="res://Player/Player Sprites/Death/BlueMage_Sprite1.png" id="5_p6on4"]
[ext_resource type="Texture2D" uid="uid://ccpv1txlnwkh5" path="res://Player/Player Sprites/Death/BlueMage_Sprite2.png" id="6_3qd6v"]
[ext_resource type="Texture2D" uid="uid://c1mh418msn03c" path="res://Player/Player Sprites/Death/BlueMage_Sprite3.png" id="7_xrpbk"]
[ext_resource type="Texture2D" uid="uid://beyfd7uwjkmd0" path="res://Player/Player Sprites/Death/BlueMage_Sprite4.png" id="8_da73f"]
[ext_resource type="Texture2D" uid="uid://y4emdb0bkdak" path="res://Player/Player Sprites/Death/BlueMage_Sprite5.png" id="9_ykkfm"]
[ext_resource type="Texture2D" uid="uid://21f2yis320vw" path="res://Player/Player Sprites/Death/BlueMage_Sprite6.png" id="10_y0r53"]
[ext_resource type="Texture2D" uid="uid://bf14t2dsl0qu3" path="res://Player/Player Sprites/Death/BlueMage_Sprite7.png" id="11_7gbg7"]
[ext_resource type="Texture2D" uid="uid://b1v14fsv8o2qi" path="res://Player/Player Sprites/Death/BlueMage_Sprite8.png" id="12_yabnj"]
[ext_resource type="Texture2D" uid="uid://bjr7rw8boxotx" path="res://Player/Player Sprites/Death/BlueMage_Sprite9.png" id="13_ud37t"]
[ext_resource type="Script" path="res://Player/State Machine/state_manager.gd" id="15_d25x3"]
[ext_resource type="Script" path="res://Player/State Machine/idle_state.gd" id="16_724b3"]
[ext_resource type="Script" path="res://Player/State Machine/walk_state.gd" id="17_6axpp"]
[ext_resource type="Script" path="res://Player/State Machine/attack_state.gd" id="18_dj50h"]
[ext_resource type="Script" path="res://Player/State Machine/death_state.gd" id="19_7ivn0"]
[ext_resource type="Script" path="res://Multiplayer/player_networking.gd" id="21_rgm0t"]

[sub_resource type="AtlasTexture" id="AtlasTexture_jmyjm"]
atlas = ExtResource( "4_50eux" )
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r0nk8"]
atlas = ExtResource( "4_50eux" )
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a01i7"]
atlas = ExtResource( "4_50eux" )
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_msl0e"]
atlas = ExtResource( "4_50eux" )
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f481d"]
atlas = ExtResource( "4_50eux" )
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yepas"]
atlas = ExtResource( "2_1euo6" )
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sraad"]
atlas = ExtResource( "2_1euo6" )
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c74mj"]
atlas = ExtResource( "2_1euo6" )
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hlu6w"]
atlas = ExtResource( "2_1euo6" )
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s8udk"]
atlas = ExtResource( "2_1euo6" )
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qc78o"]
atlas = ExtResource( "2_1euo6" )
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tfo0i"]
atlas = ExtResource( "2_1euo6" )
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d7kg5"]
atlas = ExtResource( "2_1euo6" )
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7vn3r"]
atlas = ExtResource( "2_5adu3" )
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rpibw"]
atlas = ExtResource( "2_5adu3" )
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jb3k5"]
atlas = ExtResource( "2_5adu3" )
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_80ot1"]
atlas = ExtResource( "2_5adu3" )
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ebgr5"]
atlas = ExtResource( "2_5adu3" )
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_arwaw"]
atlas = ExtResource( "2_5adu3" )
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_svued"]
atlas = ExtResource( "2_5adu3" )
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_12sdq"]
atlas = ExtResource( "2_5adu3" )
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qbavd"]
atlas = ExtResource( "2_5adu3" )
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_663bl"]
atlas = ExtResource( "2_5adu3" )
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yjy7v"]
atlas = ExtResource( "2_5adu3" )
region = Rect2(320, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_umfaa"]
animations = [{
"frames": [ExtResource( "5_p6on4" ), ExtResource( "6_3qd6v" ), ExtResource( "7_xrpbk" ), ExtResource( "8_da73f" ), ExtResource( "9_ykkfm" ), ExtResource( "10_y0r53" ), ExtResource( "11_7gbg7" ), ExtResource( "12_yabnj" ), ExtResource( "13_ud37t" )],
"loop": true,
"name": &"Death",
"speed": 5.0
}, {
"frames": [SubResource( "AtlasTexture_jmyjm" ), SubResource( "AtlasTexture_r0nk8" ), SubResource( "AtlasTexture_a01i7" ), SubResource( "AtlasTexture_msl0e" ), SubResource( "AtlasTexture_f481d" )],
"loop": false,
"name": &"Attack",
"speed": 7.0
}, {
"frames": [SubResource( "AtlasTexture_yepas" ), SubResource( "AtlasTexture_sraad" ), SubResource( "AtlasTexture_c74mj" ), SubResource( "AtlasTexture_hlu6w" ), SubResource( "AtlasTexture_s8udk" ), SubResource( "AtlasTexture_qc78o" ), SubResource( "AtlasTexture_tfo0i" ), SubResource( "AtlasTexture_d7kg5" )],
"loop": true,
"name": &"Idle",
"speed": 4.0
}, {
"frames": [SubResource( "AtlasTexture_7vn3r" ), SubResource( "AtlasTexture_rpibw" ), SubResource( "AtlasTexture_jb3k5" ), SubResource( "AtlasTexture_80ot1" ), SubResource( "AtlasTexture_ebgr5" ), SubResource( "AtlasTexture_arwaw" ), SubResource( "AtlasTexture_svued" ), SubResource( "AtlasTexture_12sdq" ), SubResource( "AtlasTexture_qbavd" ), SubResource( "AtlasTexture_663bl" ), SubResource( "AtlasTexture_yjy7v" )],
"loop": true,
"name": &"Walk",
"speed": 9.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_y7b32"]
radius = 11.0

[sub_resource type="Animation" id="Animation_oimpk"]
resource_name = "Attack"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Attack"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.15, 0.25, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.35),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"attack_animation_finished"
}]
}

[sub_resource type="Animation" id="Animation_kpnvb"]
resource_name = "Death"
length = 1.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Death"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("state_manager/death_state")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"death_animation_finished"
}]
}

[sub_resource type="Animation" id="Animation_vn1ph"]
resource_name = "Idle"
length = 1.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Idle"]
}

[sub_resource type="Animation" id="Animation_ny8bb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [&"Walk"]
}

[sub_resource type="Animation" id="Animation_kw8sn"]
resource_name = "Walk"
length = 0.95
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Walk"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.15, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7kj81"]
radius = 3.0
height = 16.0

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_pcr17"]
properties/0/path = NodePath(":sync_position")
properties/0/spawn = true
properties/0/sync = true
properties/1/path = NodePath(":sync_velocity")
properties/1/spawn = true
properties/1/sync = true
properties/2/path = NodePath(":sync_character_h_flip")
properties/2/spawn = true
properties/2/sync = true
properties/3/path = NodePath(":sync_character_projectile_detector")
properties/3/spawn = true
properties/3/sync = true
properties/4/path = NodePath(":sync_character_health")
properties/4/spawn = true
properties/4/sync = true
properties/5/path = NodePath(":sync_character_state")
properties/5/spawn = true
properties/5/sync = true

[node name="Character" type="CharacterBody2D"]
position = Vector2(58, 28)
motion_mode = 1
script = ExtResource( "1_y7mrf" )

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
frames = SubResource( "SpriteFrames_umfaa" )
animation = &"Walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-4, 7)
shape = SubResource( "CircleShape2D_y7b32" )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( "Animation_oimpk" )
anims/Death = SubResource( "Animation_kpnvb" )
anims/Idle = SubResource( "Animation_vn1ph" )
anims/RESET = SubResource( "Animation_ny8bb" )
anims/Walk = SubResource( "Animation_kw8sn" )

[node name="ProjectileDetector" type="Area2D" parent="."]
visible = false
position = Vector2(-2, 0)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ProjectileDetector"]
position = Vector2(-2, 6)
shape = SubResource( "CapsuleShape2D_7kj81" )

[node name="Networking" type="Node" parent="."]
script = ExtResource( "21_rgm0t" )

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="Networking"]
root_path = NodePath("..")
resource = SubResource( "SceneReplicationConfig_pcr17" )

[node name="AttackDelay" type="Timer" parent="."]
wait_time = 0.35
one_shot = true
autostart = true

[node name="state_manager" type="Node" parent="."]
script = ExtResource( "15_d25x3" )

[node name="idle_state" type="Node" parent="state_manager"]
script = ExtResource( "16_724b3" )
animation_name = "Idle"

[node name="walk_state" type="Node" parent="state_manager"]
script = ExtResource( "17_6axpp" )
animation_name = "Walk"

[node name="attack_state" type="Node" parent="state_manager"]
script = ExtResource( "18_dj50h" )
animation_name = "Attack"

[node name="death_state" type="Node" parent="state_manager"]
script = ExtResource( "19_7ivn0" )
animation_name = "Death"
